--- a/projects/mc/mc.tex
+++ b/projects/mc/mc.tex
@@ -1,5 +1,7 @@
 \environment mc-environment
 
+\define[1]\say{\dontleavehmode\hbox to 4.9em{\sc #1\hfil}}
+
 \starttext
 
 %    \startfrontmatter
@@ -10,7 +12,24 @@
 %    \stopfrontmatter
 
     \startbodymatter
-        \input content/phaedrus
+\say{Socrates}\input ward
+
+\say{Phaedrus}\input ward 
+
+\input ward
+
+xxx
+
+\startnegindent
+\input ward
+
+\input ward
+
+\input ward
+\stopnegindent
+
+
+%        \input content/phaedrus
     \stopbodymatter
 \stoptext
 
