--- a/test/sixtysixchars/sixtysixchars.tex
+++ b/test/sixtysixchars/sixtysixchars.tex
@@ -21,7 +21,16 @@
 \switchtobodyfont[dejavu,10pt]
 \displayalphabetlength
 
-\switchtobodyfont[bookman,10pt]
+10pt
+\switchtobodyfont[etbb,10pt]
+\displayalphabetlength
+
+11pt
+\switchtobodyfont[etbb,11pt]
+\displayalphabetlength
+
+12pt
+\switchtobodyfont[etbb,12pt]
 \displayalphabetlength
 
 \stoptext
