--- a/projects/mc/mc.tex
+++ b/projects/mc/mc.tex
@@ -1,7 +1,5 @@
 \environment mc-environment
 
-\define[1]\say{\dontleavehmode\hbox to 4.9em{\sc #1\hfil}}
-
 \starttext
 
 %    \startfrontmatter
@@ -12,24 +10,11 @@
 %    \stopfrontmatter
 
     \startbodymatter
-\say{Socrates}\input ward
-
-\say{Phaedrus}\input ward 
-
-\input ward
-
-xxx
-
-\startnegindent
-\input ward
-
-\input ward
-
-\input ward
-\stopnegindent
-
-
-%        \input content/phaedrus
+\input ward\par
+test1\par
+test2\par
+test3\par
+ \input content/phaedrus
     \stopbodymatter
 \stoptext
 
