--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -463,6 +463,7 @@ no harm should come, only benefit to both parties.
 something you miss in my
 arguments and think I have left out, ask me about it.'
 
+\inouter{Transition to Socrates' first speech.}
 How does the speech seem to you, Socrates? Doesn't it seem to you to be
 extraordinarily well done, especially in its language?
 
