--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -626,6 +626,7 @@ the story this excellent fellow here forces me to tell, so that his
 friend, who seemed to him
 to be  wise even before, may seem even more so now.
 
+\inouter{Socrates' first speech on erôs}
 ‘Once upon a time, then, there was a boy, or rather a young lad, and
 very beautiful he was; and he had a very large number of lovers. And one
 of them was cunning, because although he was as much in love as any of
@@ -851,6 +852,7 @@ There, Phaedrus, it's as I said it would
 be. You'll hear nothing
 further than that from me; please let my speech end here.
 
+\inouter{Transition to Socrates' second speech.}
 \say{Phaedrus}But I thought it was just in the middle, and would  go
 on to say an equal amount about the non-lover, to the effect that one
 should rather grant him favours, saying all the good things he has on
