--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -999,6 +999,7 @@ favours to the non-lover before we can stop him.
 \say{Phaedrus}Here he is right next to you, whenever you
 wish.
 
+\inouter{Socrates' second speech begins.}
 \say{Socrates}Well then, my beautiful boy, you should take note of this --
 that the previous speech belonged to Phaedrus son of 
 Pythocles, of the deme Myrrhinous; while the one I am going to make
@@ -1064,6 +1065,7 @@ reverse, that such madness is given by the  gods to allow us to
 achieve the greatest good fortune; and the proof will be disbelieved by
 the clever, believed by the wise.
 
+\inouter{‘Experiences and actions' of divine and human souls.}
 ‘Well then: first, we must comprehend the truth about the nature of
 soul, both divine and human, by observing experiences and actions
 belonging to it; and the beginning of our  proof is this:
@@ -1271,13 +1273,13 @@ perfection; and standing
 is admonished by the many for being disturbed, when his real state is
 one of possession, which goes unrecognized by the many.
 
+\inouter{The blessings of the madness of erôs}
 ‘Well then, this is the outcome of my whole account of the 
 fourth kind of madness -- the madness of the man who, on seeing beauty
 here on earth, and being reminded of true beauty, becomes winged and,
 fluttering with eagerness to fly upwards but unable to leave the ground,
 looking upwards like a bird, and taking no heed of the things below,
-causes him to be  regarded as
-mad: the outcome is that
+causes him to be  regarded as mad: the outcome is that
 this in fact reveals itself as the best of all the kinds of divine
 possession and from the best of sources for the man who is subject to it
 and shares in it, and that it is when he partakes in this madness that
@@ -1592,24 +1594,22 @@ its attachment a meanness that, though  praised by the many as
 a virtue, will cause it to wallow mindlessly around the earth and under
 the earth for nine thousand years.'
 
+\inouter{A prayer to Love.}
 This, dear god of love, is offered and paid to you as the finest
- and best palinode of which I am capable, especially given that
+and best palinode of which I am capable, especially given that
 it was forced to use somewhat poetical language because of
-Phaedrus. Forgive what
-went before and regard this with favour; be kind and gracious -- do not
+Phaedrus. Forgive what went before and regard this with favour; be kind and gracious -- do not
 in anger take away or maim the expertise in love that you gave
-me, and grant that
- I be valued still more than now by the beautiful. If in our
+me, and grant that I be valued still more than now by the beautiful. If in our
 earlier speech Phaedrus and I said anything harsh against you, blame
 Lysias as the instigator of the speech, and make him cease from speeches
 of that kind, turning him instead, as his brother
-Polemarchus has been
-turned, to philosophy, so that his lover here too may no longer waver,
-as he does now, between the  two choices but may single-mindedly
-direct his life towards love accompanied by
-talk of a philosophical
-kind.
+Polemarchus has been turned, to philosophy, so that his lover here too 
+may no longer waver, as he does now, between the  two choices but may 
+single-mindedly direct his life towards love accompanied by
+talk of a philosophical kind.
 
+\inouter{Transition to a discussion of speaking and writing.}
 \say{Phaedrus}I pray with you, Socrates: if indeed that is better 
 for us, that may we have. But as for your speech, for some time I have
 been amazed at how much finer you managed to make it than the one
@@ -1747,7 +1747,8 @@ reasons why we should say something and not sleep in the midday heat.
 
 \say{Phaedrus}Yes, we should.
 
- \say{Socrates}Then we should consider what we proposed just now:
+\inouter{Rhetoric -- as it should be, and as it is.}
+\say{Socrates}Then we should consider what we proposed just now:
 speeches -- in what way they will be well said and written, and in what
 way they will not.
 
@@ -2670,9 +2671,11 @@ unscientific aspects of speaking.
 
 \say{Phaedrus}By all means. 
 
+\inouter{How useful is the written text (or the set speech) as a medium of 
+communication and teaching?}
 \say{Socrates}What we have left is the subject of propriety and impropriety
-in writing: in what way,
-when it is done, it will be done well, and in what way improperly. True?
+in writing: in what way, when it is done, it will be done well, and in what 
+way improperly. True?
 
 \say{Phaedrus}Yes.
 
@@ -2838,6 +2841,7 @@ happy as it is possible for a man to be.
 
 \say{Phaedrus}This is indeed much finer still. 
 
+\inouter{Conclusions.}
 \say{Socrates}So now, Phaedrus, since we've agreed about these issues we can
 decide those others.
 
@@ -2968,6 +2972,7 @@ beloved, and you take the other to Lysias as yours.
  \say{Phaedrus}I'll do it. But let's go, now that the heat has become
 milder.
 
+\inouter{A final prayer, after which Socrates and Phaedrus leave.}
 \say{Socrates}Shouldn't we pray to the gods here before we go?
 
 \say{Phaedrus}Of course.
