--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -605,7 +605,7 @@ a lover of speeches to do whatever you tell him to do.
 \say{Socrates}Not any longer, now you've sworn what you've sworn. How would I
 be able to keep myself away from feasts of that sort?
 
- PHAEDRU Speak then.
+\say{Phaedrus}Speak then.
 
 \say{Socrates}Do you know what I shall do, then?
 
