--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -1,95 +1,4 @@
-\section[title={The Structure of the {\em Phaedrus}}]
-
-The translation in this volume offers the reader no resting-points in
-the form of chapters or any other form of subdivision; Plato did not
-divide his text in this way, and, after all, by modern standards, the
-{\em Phaedrus} is not very long -- maybe the size of a novella (though
-infinitely more complex than any novella known to me). Still, the
-following rough sketch of the structure of the dialogue may be found
-useful:
-
-\startplacetable[location=none]
-\startxtable
-\startxtablebody[body]
-\startxrow
-\startxcell[width={0.30\textwidth}] 227a -- 23oe: \stopxcell
-\startxcell[width={0.70\textwidth}] Socrates meets Phaedrus; preliminary
-conversation. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 230e--234c: \stopxcell
-\startxcell[width={0.70\textwidth}] Phaedrus reads Lysias'
-speech. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 234c -- 237b: \stopxcell
-\startxcell[width={0.70\textwidth}] Transition to Socrates' first
-speech. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 237b -- 241d: \stopxcell
-\startxcell[width={0.70\textwidth}] Socrates' first speech on
-{\em erôs}. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 241d-243e: \stopxcell
-\startxcell[width={0.70\textwidth}] Transition to Socrates' second
-speech. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 243e -- 245c: \stopxcell
-\startxcell[width={0.70\textwidth}] Socrates' second speech
-begins. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 245c -- 249d: \stopxcell
-\startxcell[width={0.70\textwidth}] ‘Experiences and actions' of divine
-and human souls. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 249d -- 257a: \stopxcell
-\startxcell[width={0.70\textwidth}] The blessings of the madness of
-{\em erôs}. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 257a -- b: \stopxcell
-\startxcell[width={0.70\textwidth}] A prayer to Love. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 257b -- 259d: \stopxcell
-\startxcell[width={0.70\textwidth}] Transition to a discussion of
-speaking and writing. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 259e -- 274b: \stopxcell
-\startxcell[width={0.70\textwidth}] Rhetoric -- as it should be, and as
-it is. \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 274b -- 277a: \stopxcell
-\startxcell[width={0.70\textwidth}] How useful is the written text (or
-the set speech) as a medium of communication and teaching? \stopxcell
-\stopxrow
-\startxrow
-\startxcell[width={0.30\textwidth}] 277a -- 279b: \stopxcell
-\startxcell[width={0.70\textwidth}] Conclusions. \stopxcell
-\stopxrow
-\stopxtablebody
-\startxtablefoot[foot]
-\startxrow
-\startxcell[width={0.30\textwidth}] 279b -- c: \stopxcell
-\startxcell[width={0.70\textwidth}] A final prayer, after which Socrates
-and Phaedrus leave. \stopxcell
-\stopxrow
-\stopxtablefoot
-\stopxtable
-\stopplacetable
-
-
-%\chapter[title=Phaedrus]
-
-\page[right]
-
+%\page[right]
 \inouter{Socrates meets Phaedrus; preliminary conversation.}
 \say{Socrates}My dear Phaedrus, where is it you're going, and  
 where have you come from?
@@ -2571,7 +2480,7 @@ I'm just not in a position to help.
 \say{Socrates}Then would you like me to mention something I've heard from
 some of those who make these things their business?
 
-\say{Phaedrus}Of course
+\say{Phaedrus}Of course.
 
 \say{Socrates}The saying goes, Phaedrus, that it's right to give the
  wolf's side of the case as well.
@@ -2926,11 +2835,11 @@ such a man ought not to derive his title from these, and be called after
 them, but rather from those things in  which he is seriously
 engaged.
 
-\say{Phaedrus}What are the titles you assign him, then? \say{Socrates}To call him
-wise seems to me to be too much, and to be fitting only in the case of a
-god; to call him either a
-philosopher or something
-like that would both fit him more  and be in better taste.
+\say{Phaedrus}What are the titles you assign him, then? 
+
+\say{Socrates}To call him wise seems to me to be too much, and to be 
+fitting only in the case of a god; to call him either a
+philosopher or something like that would both fit him more  and be in better taste.
 
 \say{Phaedrus}And not at all inappropriate.
 
