--- a/projects/mc/mc-environment.tex
+++ b/projects/mc/mc-environment.tex
@@ -6,7 +6,7 @@
 
 \setupbodyfont[etbb,11pt]
 
-%\definebodyfontenvironment[11pt][interlinespace=14.4pt]
+\definebodyfontenvironment[11pt][interlinespace=14.4pt]
 
 %\definefont[chaptertitlefont][SerifCaps at 18pt][14.4pt]
 
