--- a/projects/mc/mc.tex
+++ b/projects/mc/mc.tex
@@ -2,19 +2,15 @@
 
 \starttext
 
-%    \startfrontmatter
-  %      \input content/titlepage
+    \startfrontmatter
+        \input content/titlepage
  %       \input content/tableofcontents
  %       \completecontent
  %       \page[empty]
-%    \stopfrontmatter
+    \stopfrontmatter
 
     \startbodymatter
-\input ward\par
-test1\par
-test2\par
-test3\par
- \input content/phaedrus
+        \input content/phaedrus
     \stopbodymatter
 \stoptext
 
