--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -1748,7 +1748,7 @@ answer you.
 
 \say{Phaedrus}({\em addressing the Arguments}) Ask your questions.
 
-\say{Socrates}/ARGUMENTS Well then, will not the science of rhetoric as a
+\say{Socrates}({\em Arguments}) Well then, will not the science of rhetoric as a
 whole be a kind of leading of the soul by means of
 speech, not only in
 law-courts and other kinds of public gatherings but in private ones too
@@ -1763,7 +1763,7 @@ speaking and writing is perhaps especially employed in lawsuits, though
 scientific speaking is also involved in public addresses; I have not
 heard of any extension of it beyond that.
 
-\say{Socrates}/ARGUMENTS What? Have you only heard of the manuals on rhetoric
+\say{Socrates}({\em Arguments}) What? Have you only heard of the manuals on rhetoric
 by Nestor and Odysseus, the ones they composed at Troy when they had
 nothing to do? You haven't heard of those of
 Palamedes?
@@ -1773,36 +1773,36 @@ you're dressing up Gorgias as a kind of Nestor, or maybe a Thrasymachus
 or Theodorus as
 Odysseus.
 
-\say{Socrates}/ARGUMENTS Perhaps. But anyway let them pass.  Now you
+\say{Socrates}({\em Arguments}) Perhaps. But anyway let them pass.  Now you
 tell us this: What do opposing parties in law-courts do? Don't they give
 opposing speeches? Or what shall we say?
 
 \say{Phaedrus}Just that.
 
-\say{Socrates}/ARGUMENTS About the just and unjust?
+\say{Socrates}({\em Arguments}) About the just and unjust?
 
 \say{Phaedrus}Yes.
 
- \say{Socrates}/ARGUMENTS So the man who does this scientifically
+ \say{Socrates}(\it Arguments) So the man who does this scientifically
  will make the same thing appear to the same people at one time
 just and, whenever he wishes, unjust?
 
 \say{Phaedrus}Of course.
 
-\say{Socrates}/ARGUMENTS And in public addresses he will make the same things
+\say{Socrates}({\em Arguments}) And in public addresses he will make the same things
 seem to the city at one time good, at another the
 opposite?
 
  \say{Phaedrus}Just so.
 
-\say{Socrates}/ARGUMENTS Well, don't we recognize the Eleatic Palamedes as
+\say{Socrates}({\em Arguments}) Well, don't we recognize the Eleatic Palamedes as
 speaking scientifically so as to make the same things appear to his
 hearers to be like and unlike, one and many, at rest and in
 motion?
 
 \say{Phaedrus}Yes indeed.
 
-\say{Socrates}/ARGUMENTS Then the science of giving opposing 
+\say{Socrates}({\em Arguments}) Then the science of giving opposing 
 speeches is not restricted to law-courts and public addresses, 
 but, it seems, there will be this single science -- if indeed it
 {\em is} a science -- in relation to everything that is said: the
@@ -1813,38 +1813,38 @@ makes one thing resemble another and tries to disguise it.
 
 \say{Phaedrus}What sort of thing do you mean? 
 
-\say{Socrates}/ARGUMENTS I think it will become clear if we direct our search
+\say{Socrates}({\em Arguments}) I think it will become clear if we direct our search
 this way: Does deception occur more in the case of things that are
 widely different or in those that differ little?
 
 \say{Phaedrus}In those that differ little. 
 
-\say{Socrates}/ARGUMENTS At any rate, when you are passing over from one thing
+\say{Socrates}({\em Arguments}) At any rate, when you are passing over from one thing
 to its opposite you will be more likely to escape detection if you take
 small steps than if you take large ones.
 
 \say{Phaedrus}Certainly.
 
-\say{Socrates}/ARGUMENTS In that case the person who means to  deceive
+\say{Socrates}({\em Arguments}) In that case the person who means to  deceive
 someone else, but be undeceived himself, must have a precise knowledge
 of the likeness and unlikeness of the things that
 are.
 
 \say{Phaedrus}Yes, necessarily.
 
-\say{Socrates}/ARGUMENTS So will he be able, if he is ignorant of the truth of
+\say{Socrates}({\em Arguments})S So will he be able, if he is ignorant of the truth of
 each thing, to identify the likeness, whether small or  great,
 that the other things have to the thing he does not know?
 
 \say{Phaedrus}Impossible. 
 
-\say{Socrates}/ARGUMENTS Then clearly those who hold beliefs contrary to what
+\say{Socrates}({\em Arguments}) Then clearly those who hold beliefs contrary to what
 is the case and are deceived have this kind of thing creeping in on them
 through certain likenesses.
 
 \say{Phaedrus}It does happen that way.
 
-\say{Socrates}/ARGUMENTS So is there any way in which a man  will be a
+\say{Socrates}({\em Arguments}) So is there any way in which a man  will be a
 scientific expert at making others cross over little by little from what
 is the case on each occasion, via the likenesses, leading them off
 towards the opposite, or at escaping this himself, if he has not
@@ -1852,7 +1852,7 @@ recognized what each of the things that are actually is?
 
 \say{Phaedrus}No, never.
 
- \say{Socrates}/ARGUMENTS In that case, my friend, anyone who does not
+ \say{Socrates}({\em Arguments}) In that case, my friend, anyone who does not
 know the truth, but has made it his business to hunt down appearances,
 will give us a science of speech that will, so it seems, be ridiculously
 unscientific.
@@ -2721,9 +2721,9 @@ water -- black water, sowing them through a pen with words that are
 incapable of speaking in their own support, and incapable of adequately
 teaching what is true.
 
- \say{Phaedrus}It certainly isn't likely.
+\say{Phaedrus}It certainly isn't likely.
 
- \say{Socrates}No, it isn't; but his gardens of letters, it seems, he
+\say{Socrates}No, it isn't; but his gardens of letters, it seems, he
 will sow and write for amusement, when he does write, laying up a store
 of reminders both for himself, for when he ‘reaches a forgetful old
 age', and for anyone
