--- a/projects/mc/content/phaedrus.tex
+++ b/projects/mc/content/phaedrus.tex
@@ -1783,7 +1783,7 @@ opposing speeches? Or what shall we say?
 
 \say{Phaedrus}Yes.
 
- \say{Socrates}(\it Arguments) So the man who does this scientifically
+ \say{Socrates}{(\em Arguments)} So the man who does this scientifically
  will make the same thing appear to the same people at one time
 just and, whenever he wishes, unjust?
 
