--- a/projects/mc/mc-environment.tex
+++ b/projects/mc/mc-environment.tex
@@ -10,7 +10,7 @@
 
 %\definefont[chaptertitlefont][SerifCaps at 18pt][14.4pt]
 
-%\definefontfeature[swash][swsh=yes]
+\definefontfeature[swash][swsh=yes]
 %\definefontfeature[liningfigures][onum=no,lnum=yes]
 
 %\definesymbol[asterism][\getglyph{file:Cochineal-Italic}{\char"2042}] % by unicode index
@@ -160,6 +160,12 @@
  %%
 
 \define[1]\say{\dontleavehmode\hbox to 4.9em{\sc #1\hfil}}
+
+%%
+%% C O L O R S 
+%%
+
+\definecolor[myred][c=0, m=.96, y=1, k=.22]
 
 %
 % V I S U A L   D E B U G G I N G
