--- a/projects/mc/mc-environment.tex
+++ b/projects/mc/mc-environment.tex
@@ -159,7 +159,8 @@
 %% M Y   O W N   C O M M A N D S
  %%
 
-\define[1]\say{\dontleavehmode\hbox to 4.9em{\sc #1\hfil}}
+\define\saysocrates{\dontleavehmode\hbox to 5em{\sc Socrates \hfil}}
+\define\sayphaedrus{\dontleavehmode\hbox to 5em{\sc Phaedrus \hfil}}
 
 %%
 %% C O L O R S 
