--- a/projects/mc/mc.tex
+++ b/projects/mc/mc.tex
@@ -5,12 +5,12 @@
     \startfrontmatter
         \input content/titlepage
  %       \input content/tableofcontents
- %       \completecontent
- %       \page[empty]
+        \completecontent
+        \page[empty]
     \stopfrontmatter
 
     \startbodymatter
-        \input content/phaedrus
+        \input rawcontent/phaedrussay
     \stopbodymatter
 \stoptext
 
