--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -2283,8 +2283,7 @@ speeches are to be applied. And that, surely, is the soul.
 
 \sayphaedrus Of course.
 
-\saysocrates This is therefore the object toward which the speaker's whole
-{\bf effort is directed, since it is in the soul that he
+\saysocrates This is therefore the object toward which the speaker's whole effort is directed, since it is in the soul that he
 attempts to produce conviction. Isn't that so?
 
 \sayphaedrus Yes.
