--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -601,9 +601,12 @@ and leads us by reasoning toward what is best, that sort of self-control
 is called ‘being in your right mind'; but when desire 
 takes command in us and drags us without reasoning toward pleasure, then
 its command is known as
-‘outrageousness'.\high{\goto{14}[phaedrus.htmlux5cux23phaedrfn_14]} Now
-outrageousness has as many names as the forms it can take, and these are
-quite diverse.\high{\goto{15}[phaedrus.htmlux5cux23phaedrfn_15]}
+‘outrageousness'.\endnote{I.e., {\em hubris}, which
+ranges from arrogance to the sort of crimes to which arrogance gives
+rise, sexual assault in particular.} 
+Now outrageousness has as many names as the forms it can take, and these are
+quite diverse.\endnote{Reading {\em polumeles kai
+polueides}, lit. “multilimbed and multiformed”.}
 Whichever form stands out in a particular case gives its name to the
 person who has it---and that is not a pretty name to be called, not
 worth earning at all. If it is desire for food that overpowers a
@@ -630,7 +633,9 @@ grip of something divine?
 \saysocrates Then be quiet and listen. There's something really divine
 about this place, so don't be surprised if I'm quite taken by the
 Nymphs' madness as I go on with the speech. I'm on the edge of
-speaking in dithyrambs\high{\goto{16}[phaedrus.htmlux5cux23phaedrfn_16]}
+speaking in dithyrambs\endnote{A dithyramb was a choral
+poem originally connected with the worship of Dionysus. In classical
+times it became associated with an artificial style dominated by music.}
 as it is.
 
 \sayphaedrus Very true!
@@ -774,8 +779,11 @@ why are you stopping now, Socrates?
 
 \saysocrates Didn't you notice, my friend, that even though I am
 criticizing the lover, I have passed beyond lyric into epic
-poetry?\high{\goto{17}[phaedrus.htmlux5cux23phaedrfn_17]} What do you
-suppose will happen to me if I begin to praise his opposite? Don't you
+poetry?\endnote{The overheated choral
+poems known as dithyrambs were written in lyric meters. The
+meter of the last line of Socrates' speech, however, was epic, and it is
+the tradition in epic poetry to glorify a hero, not to attack him.} 
+What do you suppose will happen to me if I begin to praise his opposite? Don't you
 realize that the Nymphs to whom you so cleverly exposed me will take
 complete possession of me? So I say instead, in a word, that every
 shortcoming for which we blamed the lover has its contrary advantage,
