--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -802,8 +802,10 @@ the speeches that have been given during your lifetime than anyone else,
 whether you composed them yourself or in one way or another forced
 others to make them; with the single exception of Simmias the Theban,
 you are far ahead of the
-rest.\high{\goto{18}[phaedrus.htmlux5cux23phaedrfn_18]} Even as we
-speak, I think, you're managing to cause me to produce yet another one.
+rest.\endnote{Simmias, a companion of
+Socrates, was evidently a lover of discussion (cf. {\em Phaedo}).} 
+Even as we speak, I think, you're managing to cause me to produce yet 
+another one.
 
 \sayphaedrus Oh, how wonderful! But what do you mean? What speech?
 
@@ -818,7 +820,8 @@ purposes. I recognize my offense clearly now. In fact, the soul too, my
 friend, is itself a sort of seer; that's why, almost from the beginning
 of my speech, I was disturbed by a very uneasy feeling, as
 Ibycus puts it, that “for offending the gods I am honored by
-men.”\high{\goto{19}[phaedrus.htmlux5cux23phaedrfn_19]} But now I
+men.”\endnote{Ibycus was a sixth-century
+poet, most famous for his passionate love poetry.} But now I
 understand exactly what my offense has been.
 
 \sayphaedrus Tell me, what is it?
@@ -861,7 +864,7 @@ these lines:\crlf
 {\em You never sailed that lovely ship,}
 
 {\em You never reached the tower of
-Troy.}\high{\goto{20}[phaedrus.htmlux5cux23phaedrfn_20]} \crlf
+Troy.} \crlf
 \crlf
 
 And as soon as he completed the poem we call the Palinode, he
@@ -907,7 +910,9 @@ the non-lover.
 \saysocrates You'll have to understand, beautiful boy, that
 the previous speech was by Phaedrus, Pythocles' son, from Myrrhinus,
 while the one I am about to deliver is by Stesichorus, Euphemus' son,
-from Himera.\high{\goto{21}[phaedrus.htmlux5cux23phaedrfn_21]} And here
+from Himera.\endnote{Etymologically:
+“Stesichorus son of Good Speaker, from the Land of Desire.” Myrrhinus
+was one of the demes of ancient Athens.} And here
 is how the speech should go:
 
 “‘There's no truth to that story'---that when a lover is available you
